methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: not found: value True
        return True
               ^SlugTracking:7: error: not found: value x
      if(x!=Color.green){
         ^SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
        backward();
                ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
      if(x!=Color.green){
      ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
      if(!isFacingWall()){
      ^