methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
      if(!isFacingWall()){
        forward();
        return True
 
      if(x!=Color.green){
        backward();
      }
    }
}
        
        
        
     
      